src/flake8_simplify/snapshots/ruff__flake8_simplify__tests__SIM102_SIM102.py.snap
---
source: src/flake8_simplify/mod.rs
expression: checks
---
- kind: NestedIfStatements
  location:
    row: 1
    column: 0
  end_location:
    row: 3
    column: 9
  fix: ~
  parent: ~
- kind: NestedIfStatements
  location:
    row: 8
    column: 0
  end_location:
    row: 10
    column: 9
  fix: ~
  parent: ~

