src/flake8_simplify/snapshots/ruff__flake8_simplify__tests__SIM103_SIM103.py.snap
---
source: src/flake8_simplify/mod.rs
expression: checks
---
- kind:
    ReturnBoolConditionDirectly: a
  location:
    row: 2
    column: 4
  end_location:
    row: 5
    column: 20
  fix:
    content: return a
    location:
      row: 2
      column: 4
    end_location:
      row: 5
      column: 20
  parent: ~

