src/flake8_simplify/snapshots/ruff__flake8_simplify__tests__SIM105_SIM105.py.snap
---
source: src/flake8_simplify/mod.rs
expression: checks
---
- kind:
    UseContextlibSuppress: ValueError
  location:
    row: 4
    column: 0
  end_location:
    row: 7
    column: 8
  fix: ~
  parent: ~
- kind:
    UseContextlibSuppress: "ValueError, OSError"
  location:
    row: 9
    column: 0
  end_location:
    row: 12
    column: 8
  fix: ~
  parent: ~
- kind:
    UseContextlibSuppress: Exception
  location:
    row: 14
    column: 0
  end_location:
    row: 17
    column: 8
  fix: ~
  parent: ~
- kind:
    UseContextlibSuppress: "a.Error, b.Error"
  location:
    row: 19
    column: 0
  end_location:
    row: 22
    column: 8
  fix: ~
  parent: ~

