src/flake8_simplify/snapshots/ruff__flake8_simplify__tests__SIM109_SIM109.py.snap
---
source: src/flake8_simplify/mod.rs
expression: checks
---
- kind:
    CompareWithTuple:
      - a
      - - b
        - c
      - a == b or a == c
  location:
    row: 2
    column: 3
  end_location:
    row: 2
    column: 19
  fix:
    content: "a in (b, c)"
    location:
      row: 2
      column: 3
    end_location:
      row: 2
      column: 19
  parent: ~

