src/flake8_simplify/snapshots/ruff__flake8_simplify__tests__SIM115_SIM115.py.snap
---
source: src/flake8_simplify/mod.rs
expression: diagnostics
---
- kind:
    OpenFileWithContextHandler: ~
  location:
    row: 1
    column: 4
  end_location:
    row: 1
    column: 8
  fix: ~
  parent: ~

