src/flake8_simplify/snapshots/ruff__flake8_simplify__tests__SIM117_SIM117.py.snap
---
source: src/flake8_simplify/mod.rs
expression: checks
---
- kind:
    MultipleWithStatements: ~
  location:
    row: 1
    column: 0
  end_location:
    row: 3
    column: 22
  fix: ~
  parent: ~

