src/flake8_simplify/snapshots/ruff__flake8_simplify__tests__SIM118_SIM118.py.snap
---
source: src/flake8_simplify/mod.rs
expression: checks
---
- kind:
    KeyInDict:
      - key
      - dict
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 18
  fix:
    location:
      row: 1
      column: 7
    end_location:
      row: 1
      column: 18
    content: dict
    message: ~
  parent: ~
- kind:
    KeyInDict:
      - "foo['bar']"
      - dict
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 25
  fix:
    location:
      row: 3
      column: 14
    end_location:
      row: 3
      column: 25
    content: dict
    message: ~
  parent: ~
- kind:
    KeyInDict:
      - foo()
      - dict
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 20
  fix:
    location:
      row: 5
      column: 9
    end_location:
      row: 5
      column: 20
    content: dict
    message: ~
  parent: ~
- kind:
    KeyInDict:
      - key
      - dict
  location:
    row: 7
    column: 4
  end_location:
    row: 7
    column: 22
  fix:
    location:
      row: 7
      column: 11
    end_location:
      row: 7
      column: 22
    content: dict
    message: ~
  parent: ~

