src/flake8_simplify/snapshots/ruff__flake8_simplify__tests__SIM202_SIM202.py.snap
---
source: src/flake8_simplify/mod.rs
expression: checks
---
- kind:
    NegateNotEqualOp:
      - a
      - b
  location:
    row: 1
    column: 7
  end_location:
    row: 1
    column: 13
  fix:
    content: a == b
    location:
      row: 1
      column: 3
    end_location:
      row: 1
      column: 13
  parent: ~
- kind:
    NegateNotEqualOp:
      - a
      - b + c
  location:
    row: 4
    column: 7
  end_location:
    row: 4
    column: 19
  fix:
    content: a == b + c
    location:
      row: 4
      column: 3
    end_location:
      row: 4
      column: 19
  parent: ~
- kind:
    NegateNotEqualOp:
      - a + b
      - c
  location:
    row: 7
    column: 7
  end_location:
    row: 7
    column: 17
  fix:
    content: a + b == c
    location:
      row: 7
      column: 3
    end_location:
      row: 7
      column: 17
  parent: ~

